<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PTcs</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="hall_loading">数据加载中...</string>
	<string name="change_account">账号</string>
	<string name="change_new_pwd">新密码</string>
	<string name="change_confirm">确认新密码</string>
	<string name="change_account_hint">请输入账号</string>
	<string name="login_pwd">请输入密码</string>
	<string name="change_new_pwd_hint">请输入新密码</string>
	<string name="change_confirm_hint">请再次输入新密码</string>
	<string name="confirm_submit">确认提交</string>
	<string name="infm_phone">手机</string>
	<string name="infm_email">邮箱</string>
	<string name="infm_id">身份证</string>
	<string name="infm_phone_hint">请输入手机号码</string>
	<string name="infm_email_hint">请输入邮箱</string>
	<string name="infm_id_hint">请输入身份证</string>
	<string name="back">返回</string>
	<string name="boutique">精品</string>
	<string name="gift">礼包</string>
	<string name="account">账号</string>
	<string name="kf">客服</string>
	<string name="hide">隐藏</string>
	<string name="sms_code">短信校验码</string>
	<string name="load_ing">加载中···</string>
	<string name="load_more">更多</string>
	<string name="load_full">已加载全部</string>
	<string name="notice">公告</string>
</resources>
