<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/xf_left"
    android:orientation="horizontal" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
         android:layout_marginLeft="@dimen/float_spac_width"
        android:id="@+id/ll_boutique"
        android:orientation="vertical">
        <ImageView 
            android:src="@drawable/btn_jp_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <TextView style="@style/text_12_000000"
            android:text="@string/boutique"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
         android:layout_marginLeft="@dimen/float_spac_width"
        android:id="@+id/ll_gift"
        android:orientation="vertical">
        <ImageView 
            android:src="@drawable/btn_gift_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <TextView style="@style/text_12_000000"
            android:text="@string/gift"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/ll_account"
        android:layout_marginLeft="@dimen/float_spac_width"
        android:layout_marginRight="@dimen/float_spac_width"
        android:orientation="vertical">
        <ImageView 
            android:src="@drawable/btn_account_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <TextView style="@style/text_12_000000"
            android:text="@string/account"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/float_spac_width"
        android:id="@+id/ll_notice"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView 
            android:src="@drawable/btn_notice_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <TextView style="@style/text_12_000000"
            android:text="@string/notice"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_hide"
         android:layout_marginRight="@dimen/float_spac_width"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView 
            android:src="@drawable/btn_hide_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"/>
        <TextView style="@style/text_12_000000"
            android:text="@string/hide"/>
     </LinearLayout>
</LinearLayout>